fixed spacing in boxes on frontEnd page

--- a/styles.css
+++ b/styles.css
@@ -451,7 +451,6 @@ body {
 }
 
 .text {
-  font-size: larger;
   font-family: inter, sans-serif;
   font-weight: bold;
 }
@@ -1111,24 +1110,49 @@ video {
   font-size: 40px;
   box-shadow: 0 12px 32px black;
 }
+
 .frontEnd-box {
   display: flex;
   flex-direction: column;
   align-items: center;
   max-width: 800px;
-  margin: 40px auto;
-  padding: 20px;
+  margin: 20px auto;
+  padding: 50px; /* adjust space to keep button on screen*/
   background: var(--bg-box-primary);
   border-radius: 12px;
   box-shadow: 10px 18px 30px rgba(2, 8, 20, 0.929);
 }
+.frontEnd-box:first-child .z-box-image {
+  margin-top: 10px;
+}
+
 .project-titles {
   font-size: 1.8rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  margin-bottom: 12px;
+  margin-bottom: 5px;
   color: white;
   text-shadow: 2px 2px 32px black;
   text-decoration: underline;
+}
+
+/*  styles to constrain media */
+.z-box-image {
+  width: 100%;
+  max-width: 600px;
+  margin-bottom: 20px;
+}
+
+.z-box-image img,
+.z-box-image video {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  display: block;
+}
+
+.iphone-clip {
+  max-height: 400px; /* Adjust as needed */
+  object-fit: contain;
 }
 
 /* Footer */
